--- a/notebooks/vectordb.ipynb
+++ b/notebooks/vectordb.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "41708f26",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "9fbcc58f",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "094750ad",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "3f5d02f0",
    "metadata": {},
    "outputs": [
@@ -722,6 +722,7 @@
     "        if file_name.endswith('.pdf'):\n",
     "            pdf_files.append(os.path.join(root, file_name))\n",
     "\n",
+    "\n",
     "for file_name in pdf_files:\n",
     "    try:\n",
     "        print(file_name)\n",
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3ff8c7e5",
    "metadata": {},
    "outputs": [
@@ -747,37 +748,142 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 1.1841906309127808\n",
+      "Score: 1.6240897178649902\n",
       "Contents:\n",
-      "One of the most serious constitutional responsibilities a President has is nominating someone to serve on the United States Supreme Court. \n",
-      "\n",
-      "And I did that 4 days ago, when I nominated Circuit Court of Appeals Judge Ketanji Brown Jackson. One of our nation’s top legal minds, who will continue Justice Breyer’s legacy of excellence.\n",
+      "Resolution : Used the suggested sentence to replace the commented sentence. (Note KI \n",
+      "is changed  to KIN in the final published SP 800 -108 Rev.1)  \n",
+      "3) When  presenting the pseudocode for  the various KDFs, the description of what \n",
+      "is output  currently has this simple form:   Output : KO. \n",
+      "What \"should\" be there (to accommodate the cases where an error occurs) is something like \n",
+      "this:   \n",
+      "Output : KO (or an error indicator).  \n",
+      "“Omitting the parenthetical remark presents a problem in following the pseudocode  in the cases \n",
+      "where an error is encountered, because no  KO value is  actually computed.”  \n",
+      "Resolution : Correc ted. (Note KO is changed  to KOUT in the final published SP 800 -108 \n",
+      "Rev.1)  \n",
+      "Robert Moskowitz  \n",
+      "To the SP800 -108r1 group and particularly to Lily Chen,  \n",
+      " \n",
+      "Thank you for providing an update to 108, particularly including current standards with the Keccak \n",
+      "function:   KMAC from SP800 -185.  \n",
+      " This seems to be the next step to an update to SP800 -56Cr2 as it says in sec 8.3:  \n",
+      " \"Note: At this time, KMAC has not been specified for use in the implementation of a two -step key - \n",
+      "derivation procedure. This restriction may  be reconsidered once a KMAC -based KDF has been  \n",
+      "approved for use as a PRF -based KDF in a revision of [SP 800 -108].\"  \n",
+      " It would be helpful if a SP800 -56Cr3 is run parallel to this revision.  \n",
+      "Resolution : It is planned to update S P 800 -56C Rev.3.   \n",
+      "My reviewing  this draft is focused on the addition of KMAC as a KDF, particularly in a two -step key - \n",
+      "derivation procedure (e.g. ECDH KDF).  \n",
+      " Sec 2.  \n",
+      "Should SP800 -56C in front of [5] to stylistically match [2] and [3] in the prior para?   Lack of this caused \n",
+      "me to wonder about 56C inclusion until I went down and looked at what ref [5] is.  \n",
+      "Resolution : Added “SP 800 -56C” in the front of [5].   \n",
+      "And what about the randomness extraction in the 2 -step KD in 56C?  Should this be included here?  \n",
+      "Resolution : The complete extraction -then -expansion key-derivation method is specified in SP \n",
+      "800-56C. Even though the KDFs specified in SP 800 -108 can be used as an expansion function, \n",
+      "they are general KDFs, used for purposes beyond the expansion step in a 2 -step key -derivation \n",
+      "method.\n",
       "------------------\n",
-      "Score: 1.5026339292526245\n",
+      "Score: 1.6254923343658447\n",
       "Contents:\n",
-      "Tonight, I’d like to honor someone who has dedicated his life to serve this country: Justice Stephen Breyer—an Army veteran, Constitutional scholar, and retiring Justice of the United States Supreme Court. Justice Breyer, thank you for your service. \n",
-      "\n",
-      "One of the most serious constitutional responsibilities a President has is nominating someone to serve on the United States Supreme Court.\n",
+      "Draft SP 800 -152                                                                           January, 2014 Draft  \n",
+      " \n",
+      "  \n",
+      "  83 FR: 6.118 The CKMS design  shall  specify any personnel compromise minimization \n",
+      "features that are provided for each supported role.  \n",
+      " \n",
+      "FR: 6.119 The CKMS design shall  specify the CKMS compromise recovery capabilities \n",
+      "that are provided for each supported role.  \n",
+      " \n",
+      " PR:6.79.    A Federal CKMS shall  perform an assessment of the \n",
+      "potential consequences of personnel security compromises  \n",
+      "before the FKCMS initially becomes operational . \n",
+      "PR:6.80.    A Federal CKMS shall  develop procedures for recovering \n",
+      "from a personnel  security compromise.  \n",
+      "PR:6.81.    A Federal CKMS shall perform an audit of its personnel \n",
+      "security actions after  a personnel security compromise is \n",
+      "detected, and issue  revisions to the FCKMS operations \n",
+      "documentation that would reduce similar  compromises.  \n",
+      "PA:6.35.    A Federal CKMS should :  \n",
+      "a) Minimize the ability of any of its management personnel  \n",
+      "to cause a security failure , \n",
+      "b) Minimize the ability of these personnel  to hide their \n",
+      "actions that caused a security failure,  \n",
+      "c) Maintain audit records that aid in determining who or \n",
+      "what caused the security failure, and  \n",
+      "d) Mitigate the negative consequences of the failure.  \n",
+      "PA:6.36.    A Federal CKMS should perform an audit of personnel \n",
+      "security actions when a personnel security compromise is \n",
+      "suspected , and issue revisions to operations manuals that \n",
+      "would reduce such future compromises.  \n",
+      "PA:6.37.    A Federal CKMS  should  provide annu al security training to \n",
+      "each of its management personnel,  and require  each to affirm  \n",
+      "that they have read and will follow the security policies and \n",
+      "procedures of the FCKMS.  \n",
+      "PA:6.38.    A Federal CKMS should  perform the following after \n",
+      "detecting an actual or probable compromise of security:  \n",
+      "a) Shut down the compromised system,  \n",
+      "b) Activate a backup facility and system with new keys \n",
+      "or uncompromised keys,  \n",
+      "c) Notify current and potential users of the possible \n",
+      "security failure, and  \n",
+      "d) Revoke compromised keys .\n",
       "------------------\n",
-      "Score: 1.5568028688430786\n",
+      "Score: 1.6262977123260498\n",
       "Contents:\n",
-      "That’s why one of the first things I did as President was fight to pass the American Rescue Plan.  \n",
-      "\n",
-      "Because people were hurting. We needed to act, and we did. \n",
-      "\n",
-      "Few pieces of legislation have done more in a critical moment in our history to lift us out of crisis.\n",
+      "Third  Draft SP 800 -152                                                                     December 2014 Draft  \n",
+      " \n",
+      "  \n",
+      "  125  3084 \n",
+      " 3085 \n",
+      "  3086 PF:12.1    Federal CKMS  administrators could review  the current \n",
+      "FCKMS technology used  in security -domain policy \n",
+      "specif ication, negotiation, and/or enforcement to determine if \n",
+      "an upgrade or replacement of the FCKMS is needed.\n",
       "------------------\n",
-      "Score: 1.5610729455947876\n",
+      "Score: 1.663177490234375\n",
       "Contents:\n",
-      "He will never extinguish their love of freedom. He will never weaken the resolve of the free world. \n",
-      "\n",
-      "We meet tonight in an America that has lived through two of the hardest years this nation has ever faced. \n",
-      "\n",
-      "The pandemic has been punishing. \n",
-      "\n",
-      "And so many families are living paycheck to paycheck, struggling to keep up with the rising cost of food, gas, housing, and so much more. \n",
-      "\n",
-      "I understand.\n",
+      "Draft SP 800 -152                                                                           January, 2014 Draft  \n",
+      " \n",
+      "  \n",
+      "  81 b) The CKMS design shall  specify which of the mitigation techniques specified in \n",
+      "this section are to be employed for each envisioned c ompromise scenario, and \n",
+      "c) The CKMS design shall  specify any additional or alternative mitigation \n",
+      "techniques that are to be employed.  \n",
+      " \n",
+      " PR:6.76.    If administration keys are compromised, a Federal CKMS \n",
+      "shall  replace the keys .  \n",
+      "PR:6.77.    If the security of a network security -control device has been \n",
+      "compromised, a  Federal CKMS shall:  \n",
+      "a) Repair or replace the  device,  \n",
+      "b) Test the repaired or replaced device, and  \n",
+      "c) Return the FCKMS to a secure state after the tests are \n",
+      "passed and before returning to an operational state.  \n",
+      "PR:6.78.    If network passwords are compromised, a Federal CKMS \n",
+      "shall:  \n",
+      "a) Replace any passwords that are compromised or \n",
+      "suspected of being compromised, \n",
+      "b) Notify entities that may be affected by the compromise. \n",
+      "c) Perform an assessment of any damage that could have resulted to the FCKMS,  \n",
+      "d) Take corrective actions that would reduce the \n",
+      "likelihood of similar failures.  \n",
+      "PA:6.29.    If the netw ork architecture is  violated, a Federal CKMS \n",
+      "should:  \n",
+      "a) Investigate the cause of the vi olation, \n",
+      "b) Report the violation to the CKMS designer, and  \n",
+      "c) Use different or revised protocols and protection \n",
+      "mechanisms , if possible.  \n",
+      "PA:6.30.    If the platform operating system  or a network application is \n",
+      "compromised, a Federal CKMS should take one or more of \n",
+      "the followi ng actions:  \n",
+      "a) Make sure that all the latest operating system  security \n",
+      "patches are installed,  \n",
+      "b) Ask the operating- system vendor if ther e is a patch for \n",
+      "the compromise, and/ or \n",
+      "c) Determine if a d evice configuration change or the  \n",
+      "blocking of some protocols will prevent future attacks \n",
+      "of the same nature as the one that resulted in  the \n",
+      "compromise.\n",
       "------------------\n"
      ]
     }
